# fimfareader

./: .gitignore  Cargo.toml  readme.md
cli/: Cargo.toml
cli/src/: main.rs
gtk/: Cargo.toml
gtk/src/: main.rs
gtk/src/components/: app.rs  app.ui  mod.rs
hpm/: Cargo.toml
hpm/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs
lib/src/archive/: mod.rs  parser.rs
lib/src/query/: optimizer.rs  parser.rs
query/: Cargo.toml
query/src/: optimizer.rs  parser.rs
search/: Cargo.toml
search/src/: lib.rs
src/: error.rs  fetcher.rs  lib.rs  main.rs  parser.rs  prelude.rs  story.rs
src/archive/: fetcher.rs  interner.rs  mod.rs  parser.rs  story.rs
src/query/: mod.rs  optimizer.rs  parser.rs
