[package]
name = "fimfareader"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "cli",
    "query",
]

default-members = [
    "cli",
]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[dependencies.chrono]
version = "*"
features = ["serde"]

[dependencies.hex]
version = "*"

[dependencies.lazy_static]
version = "*"

[dependencies.rayon]
version = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.serde_json]
version = "*"

[dependencies.zip]
version = "<0.5.7"
features = ["deflate"]
default-features = false
