[package]
name = "fimfareader"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "cli",
    "gtk",
    "query",
]

default-members = [
    "cli",
    "gtk",
]

[profile.release]
lto = true

[dependencies.chrono]
version = "*"
features = ["serde"]

[dependencies.hex]
version = "*"

[dependencies.lazy_static]
version = "*"

[dependencies.rayon]
version = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.serde_json]
version = "*"

[dependencies.zip]
version = "*"
features = ["deflate"]
default-features = false
