[package]
name = "fimfareader-cli"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2018"

[dependencies.fimfareader]
path = ".."

[dependencies.fimfareader-query]
path = "../query"

[dependencies.rustyline]
default-features = false
version = "*"

[dependencies.rayon]
version = "*"

[dependencies.tantivy]
version = "*"

[dependencies.thread_local]
version = "*"

[dependencies.zip]
version = "*"
features = ["deflate"]
default-features = false
