[package]
name = "fimfareader-query"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2021"

[dependencies.fimfareader]
path = ".."

[dependencies.chrono]
version = "*"

[dependencies.chrono-english]
version = "*"

[dependencies.nom]
version = "7"

[dependencies.rayon]
version = "*"

[dependencies.regex]
version = "*"
