[package]
name = "fimfareader-query"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2021"

[dependencies.derive_more]
default-features = false
features = ["from"]
version = "0.99.17"

[dependencies.fimfareader]
path = ".."

[dependencies.chrono]
version = "*"

[dependencies.dateparser]
version = "*"

[dependencies.nom]
version = "7"

[dependencies.rayon]
version = "*"

[dependencies.regex]
version = "*"
