[package]
name = "fimfareader-query"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2024"

[dependencies.derive_more]
features = ["from"]
version = "2.0.1"

[dependencies.fimfareader]
path = ".."

[dependencies.chrono]
version = "*"

[dependencies.dateparser]
version = "*"

[dependencies.nom]
version = "7"

[dependencies.rayon]
version = "*"

[dependencies.regex]
version = "*"
