[package]
name = "fimfareader-search"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2024"

[dependencies.fimfareader]
path = ".."

[dependencies.tantivy]
git = "https://github.com/quickwit-oss/tantivy.git"

[dependencies.zip]
version = "=0.6.6"
features = ["deflate"]
default-features = false
