[package]
name = "fimfareader-search"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2021"

[dependencies.fimfareader]
path = ".."

[dependencies.rayon]
version = "*"

[dependencies.tantivy]
version = "*"

[dependencies.thread_local]
version = "*"

[dependencies.zip]
version = "*"
features = ["deflate"]
default-features = false
