[package]
name = "fimfareader-search"
version = "0.1.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
edition = "2021"

[dependencies.fimfareader]
path = ".."

[dependencies.tantivy]
git = "https://github.com/quickwit-oss/tantivy.git"

[dependencies.zip]
version = "*"
features = ["deflate"]
default-features = false
